src/main/java/com/example/jokerexamples/vertical/bad/slack/SlackChartService.java
package com.example.jokerexamples.vertical.bad.slack;

public class SlackChartService {
}
